--- a/spa-root/src/microfrontend-layout.html
+++ b/spa-root/src/microfrontend-layout.html
@@ -18,10 +18,34 @@
   -->
 
   <main>
+    
     <route default>
       <application name="@spa-nav/react"></application>
       <application name="@spa-home/angular"></application>
       <application name="@spa-footer/vue"></application>
     </route>
+
+    <route path="home">
+      <application name="@spa-home/angular"></application>
+    </route>
+
+    <route path="films">
+      <application name="@spa-nav/react"></application>
+      <application name="@spa-films/angular"></application>
+      <application name="@spa-footer/vue"></application>
+    </route>
+
+    <route path="login">
+      <application name="@spa-nav/react"></application>
+      <application name="@spa-login/react"></application>
+      <application name="@spa-footer/vue"></application>
+    </route>
+
+    <route path="actor">
+      <application name="@spa-nav/react"></application>
+      <application name="@spa-actor/react"></application>
+      <application name="@spa-footer/vue"></application>
+    </route>
+
   </main>
 </single-spa-router>
