--- a/stencil-library/src/index.html
+++ b/stencil-library/src/index.html
@@ -12,5 +12,7 @@
     <my-component first="Stencil" last="'Don't call me a framework' JS"></my-component>
     <my-btn></my-btn>
     <my-card name="Israel"></my-card>
+    <text-box></text-box>
   </body>
+  <my-link text="link" url = "google.com"></my-link>
 </html>
