--- a/stencil-library/src/index.html
+++ b/stencil-library/src/index.html
@@ -9,6 +9,7 @@
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet"></link>
     <script type="module" src="/build/stencil-library.esm.js"></script>
     <script nomodule src="/build/stencil-library.js"></script>
+    <script src="https://kit.fontawesome.com/94e65f6987.js" crossorigin="anonymous"></script>
   </head>
   <style>
     .container{
