--- a/spa-root/src/microfrontend-layout.html
+++ b/spa-root/src/microfrontend-layout.html
@@ -40,6 +40,17 @@
       <application name="@spa-web/angular"></application>
     </route>
 
+    <route path="tools">
+      <application name="@spa-nav/react"></application>
+      <application name="@spa-tools/angular"></application>
+    </route>
+
+    <route path="library">
+      <application name="@spa-nav/react"></application>
+      <application name="@spa-library/angular"></application>
+    </route>
+
+
 
   </main>
 </single-spa-router>
