--- a/stencil-library/src/index.html
+++ b/stencil-library/src/index.html
@@ -21,10 +21,10 @@
     <nav-app tittle = "NTT-DATA Frontend"></nav-app>
 
     <div class="container">
-    <text-box text="home_text" lg="en"></text-box>
-    <my-link text="click" link = "https://www.youtube.com/" lg="en"></my-link>
-    <my-btn text="search" lg="es"></my-btn>
-    <btn-languaje text="search" lg="es"></btn-languaje>
+    <text-box text="home_text"></text-box>
+    <my-link text="click" link = "https://www.youtube.com/"></my-link>
+    <my-btn text="search"></my-btn>
+    <btn-languaje text="search"></btn-languaje>
     <light-dark-mode></light-dark-mode>
     </div>
 
