--- a/stencil-library/src/index.html
+++ b/stencil-library/src/index.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="http://localhost:3000/css/variables.css">
     <link rel="stylesheet" id="theme-colors" href="http://localhost:3000/css/colors/variables-general-colors.css">
     <link rel="stylesheet" href="/build/stencil-library.css">
-    <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet"></link>
     <script type="module" src="/build/stencil-library.esm.js"></script>
     <script nomodule src="/build/stencil-library.js"></script>
     <link rel="stylesheet" href="/build/stencil-library.css">
@@ -21,7 +20,7 @@
   </style>
   <body>
 
-    <nav-app tittle = "NTT-DATA Frontend"></nav-app>
+    <nav-app tittle = "NTT-DATA Frontend" theme={true} languaje={true}></nav-app>
 
     <div class="container">
     <text-box text="home_text"></text-box>
