--- a/stencil-library/src/index.html
+++ b/stencil-library/src/index.html
@@ -29,7 +29,7 @@
     <div class="container">
       <text-box text="home_text"></text-box>
       <my-link text="click" link="https://www.youtube.com/"></my-link>
-      <my-btn text="search"></my-btn>
+      <my-btn text="Alert" ></my-btn>
       <btn-languaje text="search"></btn-languaje>
       <light-dark-mode></light-dark-mode>
       <my-code text_code="$ npm init stencil $ npm i  $ npm start $ npm init stencil $ npm i  $ npm start $ npm init stencil $ npm i  $ npm start $ npm init stencil $ npm i  $ npm start $ npm init stencil $ npm i  $ npm start $ npm init stencil $ npm i  $ npm start"></my-code>
