--- a/stencil-library/src/index.html
+++ b/stencil-library/src/index.html
@@ -28,6 +28,7 @@
     <nav-app tittle="Nav-App"></nav-app>
     <div class="container">
       <text-box text="home_text"></text-box>
+      <separate-bar></separate-bar>
       <my-link text="click" link="https://www.youtube.com/"></my-link>
       <my-btn text="Alert" ></my-btn>
       <btn-languaje text="search"></btn-languaje>
