--- a/stencil-library/src/index.html
+++ b/stencil-library/src/index.html
@@ -7,6 +7,7 @@
     <title>Stencil Component Starter</title>
     <link rel="stylesheet" href="http://localhost:3000/css/variables.css" />
     <link rel="stylesheet" id="theme-colors" href="http://localhost:3000/css/colors/variables-general-colors.css" />
+    <link rel="stylesheet" id="colors-borders" href="http://localhost:3000/css/borders/variables-border.css" />
     <link rel="stylesheet" href="/build/stencil-library.css" />
     <script type="module" src="/build/stencil-library.esm.js"></script>
     <script nomodule src="/build/stencil-library.js"></script>
@@ -25,7 +26,7 @@
     }
   </style>
   <body>
-    <nav-app tittle="Nav-App"></nav-app>
+    <nav-app tittle="Nav-App" languaje="true" theme="true"></nav-app>
     <div class="container">
       <text-box text="home_text"></text-box>
       <separate-bar></separate-bar>
